Story/ccls 2243 assessment summary attributes lookup (#97)
Amend the endpoint to remove more logic from the UI
add unit and integration tests
